[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "healthcheck-python"
version = "1.0.1"
description = "Health Check API for multiprocessing python apps"
authors = [ "Ouva LLC. <hello@ouva.co>",]
maintainers = [ "Cagdas Bas <cagdas@ouva.co>",]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ouvaco/healthcheck-python"
classifiers = [ "Development Status :: 5 - Production/Stable", "Intended Audience :: Developers", "Natural Language :: English", "License :: OSI Approved :: Apache Software License", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11",]
[[tool.poetry.packages]]
include = "healthcheck_python"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.scripts]
set-version = "scripts.poetry_utils:set_version"
